--- a/src/components/style/Navbar.css
+++ b/src/components/style/Navbar.css
@@ -96,6 +96,11 @@ a {
   background-size: cover;
   background-position: center center;
 }
+.navbar-user-img > img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
 .navbar-user-img > svg {
   font-size: 25px;
 }
