--- a/src/components/style/Navbar.scss
+++ b/src/components/style/Navbar.scss
@@ -24,6 +24,12 @@
     margin-right: 10px;
     @include setBgImg;
 
+    >img {
+        width: 100%; 
+        height: 100%;
+        border-radius: 50%;
+    }
+
     > svg {
         font-size: 25px;
     }
