--- a/src/components/style/Navbar.css
+++ b/src/components/style/Navbar.css
@@ -107,4 +107,9 @@ a {
 
 .nav-link {
   color: rgba(255, 255, 255, 0.8);
+}
+
+.text-bold {
+  font-weight: 700;
+  letter-spacing: 1px;
 }/*# sourceMappingURL=Navbar.css.map */
