--- a/src/pages/styles/Login.scss
+++ b/src/pages/styles/Login.scss
@@ -1,49 +1,76 @@
+@import "../../base";
+
 /***    Login Page     ***/
 h2 {
-    font-weight: 300
-}
-
-form {
-    display: inline-block;
-    background: #f3f3f3;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 2rem;
-    margin: 1.5rem 0 1rem 0;
-    box-shadow: 0 5px 50px rgba(#000, 0.08);
-}
-
-form label {
-    float: left;
-    font-size: .9rem;
-    margin: 0;
-    padding: 0
-}
-
-.right-label {
-    float: right;
-    cursor: pointer
-}
-
-input {
-    width: 15rem;
-    padding: .3rem;
-    border-radius: 5px;
-    outline: none;
-    border: none
-}
-
-#sub_btn {
-    display: block;
-    width: 100%;
-    padding: .3rem;
-    border: none;
-    background: #222;
     color: #fff;
-    border-radius: 3px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    padding: 0 0 20px !important;
 }
 
-#sub_btn:hover {
-    background: #333;
-    transition: all .5s
+.login-page {
+    background-image: url('../../img/univer1.jpg');
+    @include setBgImg;
+    min-height: 100vh !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    form {
+        width: 400px;
+        height: 500px;
+        background: rgba($base-dark, 0.45);
+        backdrop-filter: blur(7px);
+        border-radius: 20px;
+        padding: 2rem;
+        box-shadow: 20px -10px 30px rgba(#fff, .35),
+        -10px 10px 35px rgba(#000, 0.7),
+        -3px 5px 20px rgba(#000, 0.7);
+    
+        input, .input-email {
+            border: 1px solid transparent !important;
+            border-radius: 10px !important;
+            padding: 13px 22px !important;
+            font-size: 20px !important;
+            background: rgba($base-dark, 0.75) !important;
+            color:#fff !important;
+            
+            &:focus {
+                border: 1px solid #21ba45 !important;
+                border-left-width: 7px !important;
+                padding: 13px 15px !important;
+            }
+        }
+        .input-text {
+            border-bottom-left-radius: 0 !important;
+            border-bottom-right-radius: 0 !important;
+        };
+        .input-password {
+            border-top-left-radius: 0 !important;
+            border-top-right-radius: 0 !important;
+        };
+
+        .checkbox {
+            padding: 30px 80px 30px 0;
+            label {
+                font-size: 16px !important;
+                color: #fff !important;
+            }
+        }
+
+        a {
+            color: #ffffff;
+            font-size: 16px;
+            cursor: pointer;
+            &:hover {text-decoration: underline !important;}
+        }
+
+        button {
+            border-radius: 10px !important;
+            letter-spacing: 2px;
+        }
+        .reset-password-btn {
+            margin: 30px 0;
+        }
+    }
 }
