--- a/src/components/style/QuizCard.css
+++ b/src/components/style/QuizCard.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 * {
@@ -74,12 +73,13 @@ a {
 }
 .quiz-page .card {
   width: 100% !important;
-  padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(36, 37, 65, 0.2);
+  box-shadow: inset 0 0 4px #dadada, 0 0 5px 1px #c9c9c9 !important;
 }
-.quiz-page .card .header {
-  padding: 20px;
+.quiz-page .card .header,
+.quiz-page .card > .content,
+.quiz-page .card .footer-card {
+  padding: 20px 40px !important;
 }
 .quiz-page .card .question-number {
   display: inline-block;
@@ -93,10 +93,13 @@ a {
   border-radius: 5px;
 }
 .quiz-page .card .buttons {
-  overflow-x: scroll;
   width: 100%;
   border-radius: 5px;
   border: 1px solid #242541;
+}
+.quiz-page .card .buttons .progress {
+  width: 70%;
+  margin: 2rem;
 }
 .quiz-page .card .buttons button {
   padding: 15px;
@@ -135,20 +138,33 @@ a {
   transition: 0.3s ease;
   cursor: pointer;
 }
+.quiz-page .card ul li::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  border: 1px solid #242541;
+  border-radius: 50%;
+  box-shadow: inset 0 0 4px rgba(36, 37, 65, 0.6);
+  left: 15px;
+  top: calc(50% - 15px);
+}
 .quiz-page .card ul li.active {
   background-color: #f8f8f8;
 }
 .quiz-page .card ul li.active::before {
-  content: "✅";
+  content: "";
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #77b586;
   position: absolute;
-  margin: 0 0 0 -40px;
+  margin: 2px 0 2px -38px;
+  animation: dotWithAnimation 0.3s ease;
 }
 .quiz-page .card ul li:hover {
   background-color: rgba(248, 248, 248, 0.8);
   box-shadow: 0 2px 5px rgba(36, 37, 65, 0.2);
-}
-.quiz-page .card .footer-card {
-  padding: 10px;
 }
 .quiz-page .card .footer-card button {
   padding: 15px 20px;
@@ -156,6 +172,9 @@ a {
 }
 .quiz-page .right-side-card {
   padding: 0px;
+}
+.quiz-page .right-side-card .header {
+  padding: 14px !important;
 }
 .quiz-page .right-side-card .header > .buttons {
   overflow: hidden;
@@ -176,4 +195,23 @@ a {
   padding: 5px;
   border-radius: 10px;
   font-size: 20px;
+}
+
+.comment-to-question-card form label, .comment-to-question-card form textarea {
+  font-size: 18px !important;
+  margin: 0 0 20px;
+  max-height: 400px;
+}
+
+@keyframes dotWithAnimation {
+  from {
+    width: 0;
+    height: 0;
+    margin: 12px 0 12px -32px;
+  }
+  to {
+    width: 16px;
+    height: 16px;
+    margin: 2px 0 2px -38px;
+  }
 }/*# sourceMappingURL=QuizCard.css.map */
