--- a/src/components/style/QuizCard.scss
+++ b/src/components/style/QuizCard.scss
@@ -4,13 +4,15 @@
     padding: 60px 5%;
 
     .card {
-        width: 100% !important;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba($base-dark, 0.2);
 
-        .header {
-            padding: 20px
+        width: 100% !important;
+        border-radius: 10px;
+        box-shadow: inset 0 0 4px #dadada, 0 0 5px 1px #c9c9c9 !important;
+
+        .header,
+        >.content,
+        .footer-card {
+            padding: 20px 40px !important;
         }
 
         .question-number {
@@ -25,10 +27,15 @@
 
 
         .buttons {
-            overflow-x: scroll;
             width: 100%;
             border-radius: 5px;
             border: 1px solid $base-dark;
+
+            .progress {
+                width: 70%;
+                margin: 2rem;
+            }
+
             button {
                 padding: 15px;
                 background-color: #fff;
@@ -68,17 +75,31 @@
                 transition: 0.3s ease;
                 cursor: pointer;
 
+                &::after {
+                    content: "";
+                    width: 30px;
+                    height: 30px;
+                    position: absolute;
+                    border: 1px solid $base-dark;
+                    border-radius: 50%;
+                    box-shadow: inset 0 0 4px rgba($base-dark, 0.6);
+                    left: 15px;
+                    top: calc(50% - 15px);
+                }
+
                 &.active {
                     background-color: $light-bg-color;
 
                     &::before {
-                        content: '✅';
-                        // width: 20px;
-                        // height: 20px;
-                        // border-radius: 50%;
-                        // background-color: $base-green;
+                        content: '';
+                        // content: '✅';
+                        width: 16px;
+                        height: 16px;
+                        border-radius: 50%;
+                        background-color: $base-green;
                         position: absolute;
-                        margin: 0 0 0 -40px;
+                        margin: 2px 0 2px -38px;
+                        animation: dotWithAnimation .3s ease;
                     }
                 }
 
@@ -89,23 +110,29 @@
             }
         }
 
-        .footer-card {
-            padding: 10px;
-
-            button {
-                padding: 15px 20px;
-                font-size: 20px;
-            }
+        .footer-card button {
+            padding: 15px 20px;
+            font-size: 20px;
         }
-    };
+    }
+
+    ;
 
     .right-side-card {
         padding: 0px;
-        .header > .buttons {
-            overflow:hidden;
-            >button {background-color: $light-bg-color;}
+
+        .header {
+            padding: 14px !important;
+            > .buttons {
+                overflow: hidden;
+                
+                > button {
+                    background-color: $light-bg-color;
+                } 
+            }
         }
-        .card-body > .buttons {
+
+        .card-body>.buttons {
             overflow: hidden;
             gap: 10px;
             flex-wrap: wrap;
@@ -116,10 +143,33 @@
                 width: 40px !important;
                 height: 40px;
                 padding: 5px;
-                
+
                 border-radius: 10px;
                 font-size: 20px;
             }
         }
-    } 
+    }
+}
+
+.comment-to-question-card form {
+
+    label, textarea {
+        font-size: 18px !important;
+        margin: 0 0 20px;
+        max-height: 400px;
+    }
+} 
+
+@keyframes dotWithAnimation {
+    from {
+        width: 0;
+        height: 0;
+        margin: 12px 0 12px -32px;
+    }
+
+    to {
+        width: 16px;
+        height: 16px;
+        margin: 2px 0 2px -38px;
+    }
 }
