--- a/src/components/style/QuizCard.css
+++ b/src/components/style/QuizCard.css
@@ -123,18 +123,16 @@ a {
   border-radius: 5px;
 }
 .quiz-page .card ul {
-  overflow: hidden;
   list-style-type: none;
-  border-radius: 10px;
-  border: 2px solid #b7b7b7;
-  box-shadow: 0 5px 15px rgba(36, 37, 65, 0.4);
 }
 .quiz-page .card ul li {
+  border-radius: 10px;
+  box-shadow: inset 0 -1px 5px rgba(36, 37, 65, 0.2), 0 2px 5px rgba(36, 37, 65, 0.2);
   position: relative;
   font-size: 20px;
+  line-height: 25px;
   padding: 20px 40px 20px 60px;
-  margin-left: -30px;
-  border: 1px solid transparent;
+  margin: 20px 0 20px -30px;
   transition: 0.3s ease;
   cursor: pointer;
 }
@@ -149,17 +147,16 @@ a {
   left: 15px;
   top: calc(50% - 15px);
 }
-.quiz-page .card ul li.active {
-  background-color: #f8f8f8;
-}
 .quiz-page .card ul li.active::before {
   content: "";
+  position: absolute;
   width: 16px;
   height: 16px;
   border-radius: 50%;
   background-color: #77b586;
   position: absolute;
-  margin: 2px 0 2px -38px;
+  left: 22px;
+  top: calc(50% - 8px);
   animation: dotWithAnimation 0.3s ease;
 }
 .quiz-page .card ul li:hover {
@@ -196,6 +193,9 @@ a {
   border-radius: 10px;
   font-size: 20px;
 }
+.quiz-page .right-side-card .card-body > .buttons > button.active {
+  background-color: #242541;
+}
 
 .comment-to-question-card form label, .comment-to-question-card form textarea {
   font-size: 18px !important;
@@ -207,11 +207,13 @@ a {
   from {
     width: 0;
     height: 0;
-    margin: 12px 0 12px -32px;
+    left: 28px;
+    top: 50%;
   }
   to {
     width: 16px;
     height: 16px;
-    margin: 2px 0 2px -38px;
+    left: 22px;
+    top: calc(50% - 8px);
   }
 }/*# sourceMappingURL=QuizCard.css.map */
