--- a/src/components/style/QuizCard.scss
+++ b/src/components/style/QuizCard.scss
@@ -60,18 +60,16 @@
         }
 
         ul {
-            overflow: hidden;
             list-style-type: none;
-            border-radius: 10px;
-            border: 2px solid #b7b7b7;
-            box-shadow: 0 5px 15px rgba($base-dark, 0.4);
-
+            
             li {
+                border-radius: 10px;
+                box-shadow: inset 0 -1px 5px rgba($base-dark, 0.2), 0 2px 5px rgba($base-dark, 0.2);
                 position: relative;
                 font-size: 20px;
+                line-height: 25px;
                 padding: 20px 40px 20px 60px;
-                margin-left: -30px;
-                border: 1px solid transparent;
+                margin: 20px 0 20px -30px;
                 transition: 0.3s ease;
                 cursor: pointer;
 
@@ -88,17 +86,16 @@
                 }
 
                 &.active {
-                    background-color: $light-bg-color;
-
                     &::before {
                         content: '';
-                        // content: '✅';
+                        position: absolute;
                         width: 16px;
                         height: 16px;
                         border-radius: 50%;
                         background-color: $base-green;
                         position: absolute;
-                        margin: 2px 0 2px -38px;
+                        left: 22px;
+                        top: calc(50% - 8px);
                         animation: dotWithAnimation .3s ease;
                     }
                 }
@@ -121,6 +118,7 @@
     .right-side-card {
         padding: 0px;
 
+        // clock header
         .header {
             padding: 14px !important;
             > .buttons {
@@ -132,20 +130,23 @@
             }
         }
 
+        // Question numbers
         .card-body>.buttons {
             overflow: hidden;
             gap: 10px;
             flex-wrap: wrap;
             justify-content: center;
             padding: 5%;
-
+            
             >button {
                 width: 40px !important;
                 height: 40px;
                 padding: 5px;
-
                 border-radius: 10px;
                 font-size: 20px;
+                &.active {
+                    background-color: $base-dark;
+                }
             }
         }
     }
@@ -164,12 +165,14 @@
     from {
         width: 0;
         height: 0;
-        margin: 12px 0 12px -32px;
+        left: 28px;
+        top: calc(50%);
     }
 
     to {
         width: 16px;
         height: 16px;
-        margin: 2px 0 2px -38px;
+        left: 22px;
+        top: calc(50% - 8px);
     }
 }
