--- a/src/components/style/QuizCard.css
+++ b/src/components/style/QuizCard.css
@@ -114,6 +114,7 @@ a {
 }
 .quiz-page .card .question {
   font-size: 24px;
+  line-height: 26px;
   font-weight: 500;
   padding: 20px;
   margin: 10px 0 20px;
@@ -121,6 +122,9 @@ a {
   background-color: #f8f8f8;
   color: #242541;
   border-radius: 5px;
+}
+.quiz-page .card .question h3 {
+  margin-bottom: 5px;
 }
 .quiz-page .card ul {
   list-style-type: none;
@@ -166,6 +170,19 @@ a {
 .quiz-page .card .footer-card button {
   padding: 15px 20px;
   font-size: 20px;
+}
+.quiz-page .card .footer-card button.quiz-submit-btn {
+  background-color: #77b586;
+  color: #fff;
+  width: 50%;
+  margin: 20px 25% 0;
+  letter-spacing: 1px;
+  transition: 0.3s ease;
+}
+.quiz-page .card .footer-card button.quiz-submit-btn:hover {
+  color: #77b586;
+  background-color: #fff;
+  box-shadow: inset 0 0 5px #77b586, 0 0 5px #77b586;
 }
 .quiz-page .right-side-card {
   padding: 0px;
