--- a/src/components/style/QuizCard.scss
+++ b/src/components/style/QuizCard.scss
@@ -52,11 +52,16 @@
 
         .question {
             font-size: 24px;
+            line-height: 26px;
             font-weight: 500;
             padding: 20px;
             margin: 10px 0 20px;
             box-shadow: 0 2px 6px rgba($base-dark, 0.4);
             @include cardStyle;
+
+            h3 {
+                margin-bottom: 5px;
+            }
         }
 
         ul {
@@ -110,10 +115,24 @@
         .footer-card button {
             padding: 15px 20px;
             font-size: 20px;
+
+            &.quiz-submit-btn {
+                background-color: $base-green;
+                color: #fff;
+                width: 50%;
+                margin: 20px 25% 0; 
+                // border: 1px solid $base-green; 
+                letter-spacing: 1px;
+                transition: .3s ease;
+                
+                &:hover {
+                    color: $base-green;
+                    background-color: #fff;
+                    box-shadow: inset 0 0 5px $base-green, 0 0 5px $base-green;
+                }
+            }
         }
     }
-
-    ;
 
     .right-side-card {
         padding: 0px;
