--- a/src/components/style/Navbar.scss
+++ b/src/components/style/Navbar.scss
@@ -18,10 +18,10 @@
 
 .navbar-user-img {
     display: inline-block;
-    width: 28px;
-    height: 28px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
-    margin-right: 10px;
+    margin-right: 5px;
     @include setBgImg;
 
     >img {
@@ -41,4 +41,13 @@
 .text-bold {
     font-weight: 700; 
     letter-spacing: 1px;
+}
+.dropdown-item {
+    font-size: 18px;
+    margin: 0 !important;
+    padding: 8px 15px;
+
+    svg {
+        margin-right: 10px;
+    } 
 }
