--- a/src/pages/styles/Login.scss
+++ b/src/pages/styles/Login.scss
@@ -11,7 +11,7 @@
 
     form {
         width: 400px;
-        height: 500px;
+        min-height: 500px;
         background: rgba($base-dark, 0.45);
         backdrop-filter: blur(7px);
         border-radius: 20px;
